# technical-test

./: .gitattributes  .gitignore  .pre-commit-config.yaml
ABZ.agency/employee directory/services/backend/: pyproject.toml
ABZ.agency/employee directory/services/backend/alembic/: env.py
ABZ.agency/employee directory/services/backend/alembic/versions/: 073784488099_add_user_table.py  3e910154a8b1_initial_migration_with_employee_table.py  8aaa62dee252_create_employee_table.py  f63e69b0325c_add_photo_path_to_employee.py
ABZ.agency/employee directory/services/backend/app/: database.py  main.py
ABZ.agency/employee directory/services/backend/app/api/: api.py  deps.py
ABZ.agency/employee directory/services/backend/app/api/endpoints/: auth.py  employees.py  pages.py  users.py
ABZ.agency/employee directory/services/backend/app/core/: config.py  security.py
ABZ.agency/employee directory/services/backend/app/crud/: __init__.py  employee.py  user.py
ABZ.agency/employee directory/services/backend/app/modles/: __init__.py  employee.py  user.py
ABZ.agency/employee directory/services/backend/app/schemas/: __init__.py  employee.py
ABZ.agency/employee directory/services/backend/scripts/: seed.py
ABZ.agency/employee directory/services/backend/static/css/: login.css  style.css
ABZ.agency/employee directory/services/backend/static/js/: employee_form.js  employee_list.js  login.js  main.js
ABZ.agency/employee directory/services/backend/templates/: employee_form.html  employee_list.html  index.html  login.html
AvitoTech/: README.md
OstrovokTech/: employee.sql
(+4 files in other folders)
