[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "ilia"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn[standard] (>=0.44.0,<0.45.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "faker (>=40.13.0,<41.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
